[package]
name = "mau_view"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="2.33"
crossterm="0.20"
viuer="0.5"
ctrlc={version ="3.1" , features =["termination"]}
image ="0.23"

[features]
default = []
sixel = ["viuer/sixel"]
